@@ -25,6 +25,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "../algo/varint.h"
 #include "stream_entity.h"
 #include "consumer.h"
+#include "../system/endianness.h"
 
 using std::string;
 using std::vector;
@@ -47,19 +48,19 @@ struct Serializer : public Consumer
 		if (varint_)
 			write_varint(x, *this);
 		else
-			write(x);
+			write(to_little_endianness(x));
 		return *this;
 	}
 
 	Serializer& operator<<(unsigned long x)
 	{
-		write(x);
+		write(to_little_endianness(x));
 		return *this;
 	}
 
 	Serializer& operator<<(unsigned long long x)
 	{
-		write(x);
+		write(to_little_endianness(x));
 		return *this;
 	}
 
